--- a/PersonalContactInformation/AppShell.xaml
+++ b/PersonalContactInformation/AppShell.xaml
@@ -3,12 +3,12 @@
     x:Class="PersonalContactInformation.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:PersonalContactInformation"
+    xmlns:local="clr-namespace:PersonalContactInformation.Views"
     Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        Title="MainPage"
+         ContentTemplate="{DataTemplate local:MainPage}"
+        Route="Views/MainPage" />
 
 </Shell>
