--- a/PersonalContactInformation/Views/AddContact.xaml
+++ b/PersonalContactInformation/Views/AddContact.xaml
@@ -2,11 +2,14 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PersonalContactInformation.Views.AddContact"
+             xmlns:Control="clr-namespace:PersonalContactInformation.Views.Controls"
              Title="AddContact">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+
+    <Control:ContactControl x:Name="ContactCtrl"
+                        OnSave="ContactCtrl_OnSave">
+        <!--to make this on btnsave from from other page-->
+
+
+    </Control:ContactControl>
+    
 </ContentPage>
