--- a/PersonalContactInformation/Views/EditContact.xaml
+++ b/PersonalContactInformation/Views/EditContact.xaml
@@ -2,11 +2,13 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PersonalContactInformation.Views.EditContact"
-             Title="EditContact">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             xmlns:Control="clr-namespace:PersonalContactInformation.Views.Controls"
+             Title="Edit Contact">
+
+
+    <Control:ContactControl x:Name="ContactCtrl"
+                            OnSave="ContactCtrl_OnSave">    <!--to make this on btnsave from from other page-->
+        
+    </Control:ContactControl>
+    
 </ContentPage>
