--- a/PersonalContactInformation/Views/MainPage.xaml
+++ b/PersonalContactInformation/Views/MainPage.xaml
@@ -5,20 +5,30 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     Title="My Contacts">
 
-    <Grid Padding="10,5,10,10" ColumnSpacing="5">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
+    <Grid
+        Margin="10"
+        Padding="10"
+        ColumnDefinitions=".70*,.30*"
+        ColumnSpacing="5"
+        RowDefinitions=" Auto,100*"     
+        RowSpacing="10">
 
-        <StackLayout HorizontalOptions="FillAndExpand" Orientation="Horizontal">
+        
+
+        
+
             <SearchBar
-                x:Name="searchBar"
+                
+                Grid.Row="0"
+                Grid.Column="0"
                 HorizontalOptions="FillAndExpand"
-                Placeholder="Search..." />
+                Placeholder="Search..."
+                Margin="10"
+                x:Name="searchBar"
+                TextChanged="searchBar_TextChanged"/>
+        
 
-            <Button
+              <Button
                 Margin="10,10,10,10"
                 Padding="0,10,1,10"
                 BackgroundColor="DarkBlue"
@@ -26,24 +36,60 @@
                 Text="Search"
                 WidthRequest="80" />
 
-        </StackLayout>
 
-        <Button
+
+
+              <Button
+               x:Name="BtnAddContact"
+               Grid.Row="0"
+               Grid.Column="1"
+               BackgroundColor="Transparent"
+               BorderWidth="0"
+               Clicked="BtnAddContact_Clicked"
+               HorizontalOptions="End"
+               Text="Add"
+               TextColor="Blue"
+               VerticalOptions="Center"
+               WidthRequest="80" />
+               
+        <ListView
+            x:Name="xmalContactList"
             Grid.Row="1"
-            Margin="0,0,0,0"
-            Padding="10,10,10,10"
-            HeightRequest="60"
-            HorizontalOptions="End"
-            Text="Add"
-            VerticalOptions="Center"
-            WidthRequest="80" />
+            Grid.ColumnSpan="2"
+            BackgroundColor="Transparent"
+            ItemSelected="xmalContactList_ItemSelected"
+            ItemTapped="xmalContactList_ItemTapped"
+            RowHeight="50"
+            SeparatorColor="Blue">
+            <ListView.ItemTemplate>
+                
+                <DataTemplate>
+
+                    <TextCell Detail="{Binding Email}"  Text="{Binding Path=Name}" >
+
+                        <TextCell.ContextActions>
+                            <MenuItem Text="Delete"
+                                      x:Name="MenueItemDelete"
+                                      IsDestructive="True"
+                                      Clicked="MenueItemDelete_Clicked"
+                                      CommandParameter="{Binding .}"/>
+
+                            <MenuItem Text="Edit"
+                                      x:Name="MenuItemEdit"
+                                      Clicked="MenuItemEdit_Clicked"
+                                      CommandParameter="{Binding .}"/>
+
+                        </TextCell.ContextActions>
+                        
+                    </TextCell>
+
+                </DataTemplate>
+            </ListView.ItemTemplate>
 
 
-        <Label
-            Grid.Row="2"
-            HorizontalOptions="Center"
-            Text="Welcome to MainPage"
-            VerticalOptions="Center" />
+
+        </ListView>
+
     </Grid>
 
 </ContentPage>
