navigation done next validation and other blocks

--- a/PersonalContactInformation/AppShell.xaml
+++ b/PersonalContactInformation/AppShell.xaml
@@ -9,6 +9,6 @@
     <ShellContent
         Title="MainPage"
          ContentTemplate="{DataTemplate local:MainPage}"
-        Route="Views/MainPage" />
+        Route="MainPage" />
 
 </Shell>
