add  form , and save methoed working, sync with the api, changed all vars and methoeds as lukaa named

--- a/Client/MauiBlazorApp/Pages/Index.razor
+++ b/Client/MauiBlazorApp/Pages/Index.razor
@@ -22,11 +22,12 @@ else
                 <td>Zwischenname</td>
                  <td>Telefonnummer</td>
                 <td>email</td>
-                <td>Straße</td>
+                <td>Strasse</td>
                 <td>Hausnummer</td>
                 <td>PLZ</td>
                 <td>Stadt</td>
                 <td>Land</td>
+                <td>Gender</td>
 @*                res of the list 
  *@
                 </tr>
@@ -40,11 +41,12 @@ else
                         <td>@person.Zwischenname</td>
                         <td>@person.Telefonnummer</td>
                         <td>@person.email</td>
-                        <td>@person.Straße</td>
+                        <td>@person.Strasse</td>
                         <td>@person.Hausnummer</td>
                         <td>@person.PLZ</td>
                         <td>@person.Stadt</td>
                         <td>@person.Land</td>
+                        <td>@person.Gender</td>
                         <!-- Add other table data here -->
                     </tr>
                 }
