--- a/Client/MauiBlazorApp/_Imports.razor
+++ b/Client/MauiBlazorApp/_Imports.razor
@@ -6,3 +6,5 @@
 @using Microsoft.JSInterop
 @using MauiBlazorApp
 @using MauiBlazorApp.Shared
+@using MauiBlazorApp.Services
+@inject IPersonService PersonService
