--- a/Client/MauiBlazorApp/Shared/NavMenu.razor
+++ b/Client/MauiBlazorApp/Shared/NavMenu.razor
@@ -14,11 +14,14 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
+
+
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="addperson">
+                <span class="oi oi-plus" aria-hidden="true"></span> Add Person
             </NavLink>
         </div>
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
@@ -26,6 +29,9 @@
         </div>
     </nav>
 </div>
+
+
+
 
 @code {
     private bool collapseNavMenu = true;
