--- a/Client/MauiBlazorApp/Shared/NavMenu.razor
+++ b/Client/MauiBlazorApp/Shared/NavMenu.razor
@@ -1,17 +1,31 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">MauiBlazorApp</a>
+        <a class="navbar-brand" href="" style="font-size: 15px;">Personal Contact Information</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
     </div>
 </div>
 
+
+<style>
+    .oi {
+        font-size: 16px; /* Adjust the font size for icons */
+    }
+
+    .nav-link-text {
+        font-size: 14px; /* Adjust the font size for the text */
+    }
+</style>
+
+
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                <span class="oi oi-home" aria-hidden="true"></span> Contact List 
             </NavLink>
         </div>
 
