--- a/Client/BlazorApp/Pages/Index.razor
+++ b/Client/BlazorApp/Pages/Index.razor
@@ -5,17 +5,124 @@
 @inject IJSRuntime JSRuntime
 @inject NavigationManager NavManager;
 
-<script src="js/custom.js"></script>
+
 
 <h1>Person List</h1>
 
 
+
 <div class="input-group mb-3">
     <input type="text" class="form-control" placeholder="Search..." @bind="searchText" @oninput="HandleSearchTextChanged" />
+
+    <button class="btn btn-clear" type="button" @onclick="ClearSearchText"><i class="fas fa-times-circle"> X </i></button>
+
     <div class="input-group-append">
         <button class="btn btn-outline-secondary" type="button" @onclick="BtnSearch_Clicked">Search</button>
     </div>
 </div>
+
+
+<style>
+
+    /* body {
+        min-height: 100vh;
+    } */
+
+    .btn-clear {
+        background: none;
+        border: none;
+        padding: 0.5rem 0.9rem 0.5rem 1rem;
+    }
+
+        .btn-clear:hover {
+            color: red;
+        }
+
+        .btn-clear:focus {
+            outline: none;
+        }
+
+        .btn-clear i {
+            font-size: 30rem;
+            border-radius: 50%;
+        }
+
+    .input-group-append button:first-child {
+        margin-right: 0.5rem;
+    }
+
+
+
+    .btn-outline-secondary {
+        background: none;
+        border: groove;
+        padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+    }
+
+    .btn-outline-secondary {
+        color: black;
+    }
+
+
+        .btn-outline-secondary:hover {
+            background-color: green;
+        }
+
+        .btn-outline-secondary:focus {
+            outline: none;
+        }
+
+    .btn-clear i {
+        font-size: 1rem;
+        border-radius: 50%;
+    }
+
+    .input-group-append button:first-child {
+        margin-right: 0.5rem;
+    }
+
+
+
+
+    .btn-primary.btn-sm,
+    .btn-danger.btn-sm {
+        padding: 0.25rem 0.5rem;
+        font-size: 0.30rem;
+    }
+
+
+    .btn-secondary {
+        background-color: Highlight;
+        border-color: #cacaca;
+        color : black;
+        font-weight: normal;
+    }
+
+        .btn-secondary:hover,
+        .btn-secondary:focus {
+            background-color: #cacaca;
+            border-color: #b3b3b3;
+            color: #333;
+            font-weight: normal;
+        }
+
+        .btn-secondary:active,
+        .btn-secondary.active {
+            background-color: #b3b3b3;
+            border-color: #9e9e9e;
+            color: #333;
+            font-weight: normal;
+        }
+
+    .dropdown-toggle.btn-secondary:not([disabled]):not(.disabled):active:focus,
+    .dropdown-toggle.btn-secondary:not([disabled]):not(.disabled).active:focus {
+        box-shadow: none;
+    }
+
+    .dropdown-toggle.btn-secondary:focus {
+        box-shadow: none;
+    }
+</style>
 
 <div class="dropdown">
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -46,7 +153,7 @@
 @*                     <tr @onclick="@( () => DisplayOption(person) )">
     
  *@ 
-                         <tr>
+                         <tr > 
                          <td>@person.Nachname</td>
                         <td>@person.Vorname</td>
                         <!-- Add other table data here -->
@@ -89,8 +196,22 @@ else
                 @foreach (var person in _PersonList)
                 {
                     @* <tr @onclick="@(() => DisplayOption(person))"> *@
+
                         <tr>
-                        <td>@person.Vorname</td>
+                        <td>
+                            <div class="position-relative">
+                                @person.Vorname
+                                <div class="dropdown">
+                                    <button class="btn btn-secondary dropdown-toggle btn-sm" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Actions
+                                    </button>
+                                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                        <button class="btn btn-primary mx-1 mr-3" @onclick="@(() => DisplayUpdate(person.Id))">Update</button>
+                                        <button class="btn btn-danger mx-1 mr-3 " @onclick="@(() => DisplayDeleteConfirmation(person.Id))">Delete</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </td>
                         <td>@person.Nachname</td>
                         <td>@person.Zwischenname</td>
                         <td  >@person.Email</td>
@@ -103,8 +224,7 @@ else
                         <td>@person.Gender</td>
                         <!-- Add other table data here -->
                         <td>
-                            <button class="btn btn-primary mx-1 mr-3" @onclick="@(() => DisplayUpdate(person.Id))">Update</button>
-                            <button class="btn btn-danger mx-2 mr-4 " @onclick="@(() => DisplayDeleteConfirmation(person.Id))">Delete</button>
+                            
                         </td>
                     </tr>
                 }
@@ -115,7 +235,15 @@ else
 }
 
 
+
+
+
 @code {
+
+    private void ClearSearchText()
+    {
+        searchText = "";
+    }
     List<PersonModel> _PersonList;
 
     private string searchText = string.Empty;
@@ -141,8 +269,12 @@ else
         if (!string.IsNullOrWhiteSpace(searchText))
         {
             searchResults = allPersons
-                .Where(person => person.Nachname.Contains(searchText) || person.Vorname.Contains(searchText))
-                .ToList();
+                // .Where(person => person.Nachname.Contains(searchText) || person.Vorname.Contains(searchText))
+                // .ToList();
+            .Where(person =>
+            person.Nachname.IndexOf(searchText, StringComparison.OrdinalIgnoreCase) >= 0
+            || person.Vorname.IndexOf(searchText, StringComparison.OrdinalIgnoreCase) >= 0)
+            .ToList();
         }
         else
         {
@@ -156,13 +288,13 @@ else
 
         if (!string.IsNullOrEmpty(searchText))
         {
-            var results = await PersonService.SearchPersonsByName(searchText);
+            // var results = await PersonService.SearchPersonsByName(searchText);
 
-            if (results.Count > 0)
-            {
-                searchResults = results;
-            }
-            else
+            // if (results.Count > 0)
+            // {
+            //     searchResults = results;
+            // }
+            // else
             {
                 bool addContact = await JSRuntime.InvokeAsync<bool>("confirm", $"Contact with name '{searchText}' does not exist. Do you want to add it?");
 
