--- a/Client/BlazorApp/Shared/NavMenu.razor.css
+++ b/Client/BlazorApp/Shared/NavMenu.razor.css
@@ -2,6 +2,10 @@
     background-color: rgba(255, 255, 255, 0.1);
 }
 
+body {
+    min-height: 100vh;
+}
+
 .top-row {
     height: 3.5rem;
     background-color: rgba(0,0,0,0.4);
