runn on androind finally , adjusted the api to match the eulator and wrote certfcate, made all btns , neet to make last x btn with search dropdown

--- a/Client/MauiBlazorApp/_Imports.razor
+++ b/Client/MauiBlazorApp/_Imports.razor
@@ -6,5 +6,6 @@
 @using Microsoft.JSInterop
 @using MauiBlazorApp
 @using MauiBlazorApp.Shared
+@using Blazorise
 @using MauiBlazorApp.Services
 @inject IPersonService PersonService
