--- a/Client/MauiBlazorApp/Pages/Index.razor
+++ b/Client/MauiBlazorApp/Pages/Index.razor
@@ -13,18 +13,20 @@
     <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
     <script src="_content/Blazorise/blazorise.js"></script>
     <script src="_content/Blazorise.Bootstrap/blazorise.bootstrap.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
-
+   
 
     
 </head>
 
 <h1>Person List</h1>
 
-
+@* <iframe width="560" height="315" src="https://www.youtube.com/embed/m8e-FF8MsqU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+ *@
 
 <div class="input-group mb-3">
     <input type="text" class="form-control" placeholder="Search..." @bind="searchText" @oninput="HandleSearchTextChanged" />
@@ -108,35 +110,45 @@
 
     .btn-secondary {
         background-color: Highlight;
-        border-color: #cacaca;
+        border-color: green;
         color: black;
         font-weight: normal;
     }
 
-        .btn-secondary:hover,
-        .btn-secondary:focus {
-            background-color: #cacaca;
-            border-color: #b3b3b3;
-            color: #333;
+        .btn-secondary:hover
+         {
+            background-color: none;
+            border-color: None;
+            color: lightblue;
             font-weight: normal;
+            border: none
         }
 
         .btn-secondary:active,
         .btn-secondary.active {
-            background-color: #b3b3b3;
-            border-color: #9e9e9e;
-            color: #333;
+            background-color: white;
+            border-color: None;
+            color: lightblue;
             font-weight: normal;
+            border:none
         }
 
-    .dropdown-toggle.btn-secondary:not([disabled]):not(.disabled):active:focus,
+    .dropdown-toggle.btn-secondary:
+    {
+        background-color: white;
+        border-color: None;
+        color: lightblue;
+        font-weight: normal;
+        border: none
+    }
     .dropdown-toggle.btn-secondary:not([disabled]):not(.disabled).active:focus {
         box-shadow: none;
     }
 
     .dropdown-toggle.btn-secondary:focus {
         box-shadow: none;
-    }
+            background-color: green;
+        }
 </style>
 
 <div class="dropdown">
@@ -148,6 +160,7 @@
                 <li class="dropdown-item">@person.Nachname</li>
             }
         }
+        
     </ul>
 </div>
 
@@ -218,7 +231,7 @@ else
                                 @person.Vorname
                                 <div class="dropdown">
                                     <button class="btn btn-secondary dropdown-toggle btn-sm" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Actions
+                                        Options
                                     </button>
                                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                         <button class="btn btn-primary mx-1 mr-3" @onclick="@(() => DisplayUpdate(person.Id))">Update</button>
@@ -256,8 +269,13 @@ else
 
     private void ClearSearchText()
     {
+
         searchText = "";
     }
+
+
+
+
     List<PersonModel> _PersonList;
 
     private string searchText = string.Empty;
@@ -402,9 +420,13 @@ else
     </div>
 </div>
 
+
 @code {
     private async Task ConfirmDelete()
     {
         await OnConfirmation.InvokeAsync(true);
     }
 }
+
+
+
