--- a/Client/MauiBlazorApp/Pages/MainPage.xaml
+++ b/Client/MauiBlazorApp/Pages/MainPage.xaml
@@ -12,6 +12,14 @@
     </BlazorWebView>
 
 
+    
+
+    <!--<WebView Source="https://learn.microsoft.com/dotnet/maui" />
+
+    
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/m8e-FF8MsqU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+
 
 
 </ContentPage>
