--- a/Client/MauiBlazorApp/Shared/NavMenu.razor
+++ b/Client/MauiBlazorApp/Shared/NavMenu.razor
@@ -32,6 +32,13 @@
 
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="android" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Android 
+            </NavLink>
+        </div>
+
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="addperson">
                 <span class="oi oi-plus" aria-hidden="true"></span> Add Person
             </NavLink>
