--- a/Client/MauiBlazorApp/Pages/Android.razor
+++ b/Client/MauiBlazorApp/Pages/Android.razor
@@ -18,9 +18,9 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
-   
 
-    
+
+
 </head>
 
 <h1>Person List</h1>
@@ -30,46 +30,32 @@
  *@
 
 <div class="input-group mb-3">
-    <input type="text" class="form-control" placeholder="Search..." @bind="searchText" @oninput="HandleSearchTextChanged" />
+    <input type="text" class="search-bar" placeholder="Search..." @bind="searchText" @oninput="HandleSearchTextChanged" />
 
     <button class="btn btn-clear" type="button" @onclick="ClearSearchText"><i class="fas fa-times-circle"> X </i></button>
 
     <div class="input-group-append">
-        <button class="btn btn-outline-secondary" type="button" @onclick="BtnSearch_Clicked">Search</button>
+        <button class="btn btn-Search" type="button" @onclick="BtnSearch_Clicked">Search</button>
     </div>
 </div>
 
 
 <style>
 
-    body {
-        min-height: 100vh;
+    .search-bar {
+        border: solid;
+        border-radius: 40px 0 0 40px;
+        font-size: 15px;
     }
 
-    .btn-clear {
+    .btn-Search {
         background: none;
-        border: none;
-        padding: 0.5rem 0.9rem 0.5rem 1rem;
+        color: black;
+        border-radius: 0 40px 40px 0;
+        /* font-size: 15px; */
+        border: solid;
+        font-size: 1.2rem;
     }
-
-        .btn-clear:hover {
-            color: red;
-        }
-
-        .btn-clear:focus {
-            outline: none;
-        }
-
-        .btn-clear i {
-            font-size: 30rem;
-            border-radius: 50%;
-        }
-
-    .input-group-append button:first-child {
-        margin-right: 0.5rem;
-    }
-
-
 
     .btn-outline-secondary {
         background: none;
@@ -82,17 +68,101 @@
     }
 
 
-        .btn-outline-secondary:hover {
-            background-color: green;
+    .btn-Search:hover {
+        background-color: green;
+    }
+
+    .btn-outline-secondary:focus {
+        outline: none;
+    }
+
+    .table-container {
+        max-height: 600px; /* Adjust this value to set the maximum height of the container */
+        overflow-y: auto;
+    }
+
+
+    .person-name {
+        /* Adjust the value as needed */
+        margin-bottom: 5px;
+        margin-top: 5px;
+    }
+
+
+
+
+
+    .divider {
+        border-bottom: 1px solid black;
+        margin-bottom: 0,1px;
+        margin-top: 0px;
+    }
+
+
+    .person-name {
+        font-weight: bold;
+        font-size: 1.2em;
+        margin-bottom: 1px;
+        margin-top: 1px;
+    }
+
+    .person-vorname {
+        margin-right: 2px;
+        margin-bottom: 1px;
+        margin-top: 1px;
+    }
+
+    .person-telefonnummer {
+        color: black;
+        margin-top: 1px; /* Adjust the value as needed */
+        margin-bottom: 0px;
+        font-family: Britannic;
+        font: bold;
+    }
+
+
+    .person-list {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .person-item {
+        padding: 2px;
+        border-bottom: 1px solid #ccc;
+    }
+
+
+
+    body {
+        min-height: 100vh;
+    }
+
+    .btn-clear {
+        background: none;
+        font-size: 15px;
+        border: solid;
+        padding: 0.5rem 0.9rem 0.5rem 1rem;
+    }
+
+        .btn-clear:hover {
+            color: red;
         }
 
-        .btn-outline-secondary:focus {
+        .btn-clear:focus {
             outline: none;
         }
 
+
+
+    .input-group-append button:first-child {
+        margin-right: 0.5rem;
+    }
+
+
+
     .btn-clear i {
         font-size: 1rem;
-        border-radius: 50%;
+        border-radius: 80%;
     }
 
     .input-group-append button:first-child {
@@ -116,8 +186,7 @@
         font-weight: normal;
     }
 
-        .btn-secondary:hover
-         {
+        .btn-secondary:hover {
             background-color: none;
             border-color: None;
             color: lightblue;
@@ -131,50 +200,29 @@
             border-color: None;
             color: lightblue;
             font-weight: normal;
-            border:none
+            border: none
         }
 
-    .dropdown-toggle.btn-secondary:
-    {
+    .dropdown-toggle.btn-secondary: {
         background-color: white;
         border-color: None;
         color: lightblue;
         font-weight: normal;
         border: none
     }
-    .dropdown-toggle.btn-secondary:not([disabled]):not(.disabled).active:focus {
-        box-shadow: none;
-    }
 
-    .dropdown-toggle.btn-secondary:focus {
-        box-shadow: none;
+        .dropdown-toggle.btn-secondary:not([disabled]):not(.disabled).active:focus {
+            box-shadow: none;
+        }
+
+        .dropdown-toggle.btn-secondary:focus {
+            box-shadow: none;
             background-color: green;
         }
 
-
-    .person-list {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .person-item {
-        padding: 2px;
-        border-bottom: 1px solid #ccc;
-    }
-
-    .person-name {
-        font-weight: bold;
-        font-size: 1.2em;
-    }
-
-    .person-vorname {
-        margin-right: 2px;
-    }
-
-    .person-telefonnummer {
-        margin-top: 1px;
-        color: #666;
 </style>
+
+
 
 <div class="dropdown">
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -185,36 +233,39 @@
                 <li class="dropdown-item">@person.Nachname</li>
             }
         }
-        
+
     </ul>
 </div>
 
 @if (searchResults != null)
 {
-    <div class="table-responsive">
-        <table class="table">
-            <thead>
-                <tr>
-                    <td>Nachname</td>
-                    <th>Vorname</th>
-                    <!-- Add other table headers here -->
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var person in searchResults)
-                {
-                    @*                     <tr @onclick="@( () => DisplayOption(person) )">
-
-            *@
-                    <tr @onclick="@( () => DisplayOption(person) )">
-                        <td>@person.Nachname</td>
-                        <td>@person.Vorname</td>
-                        <!-- Add other table data here -->
+    
+        <div class="table-responsive">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <td>Nachname</td>
+                        <th>Vorname</th>
+                        <!-- Add other table headers here -->
                     </tr>
-                }
-            </tbody>
-        </table>
-    </div>
+                </thead>
+                <tbody>
+                    @foreach (var person in searchResults)
+                    {
+                        @*                     <tr @onclick="@( () => DisplayOption(person) )">
+
+                *@
+                        <tr @onclick="@( () => DisplayOption(person) )">
+                            <td>@person.Nachname</td>
+                            <td>@person.Vorname</td>
+                            <!-- Add other table data here -->
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    
+
 }
 
 
@@ -225,31 +276,53 @@
 else
 {
 
-    <div class="table-responsive">
-        <table class="table">
+        <div class="table-responsive">
+            <table class="table">
            
-            <tbody>
-                @foreach (var person in _PersonList)
-                {
+                <tbody>
+                    @foreach (var person in _PersonList)
+                    {
                     <div class="person-item" @onclick="@(() => DisplayOption(person))">
-                        <div class="person-name">
-                            <span class="person-vorname">@person.Vorname</span>
-                            <span class="person-nachname">@person.Nachname</span>
+                            <div class="person-name">
+                                <span class="person-vorname">@person.Vorname</span>
+                                <span class="person-nachname">@person.Nachname</span>
+                            </div>
+                            <div class="person-telefonnummer">@person.Telefonnummer</div>
+                            <div class="divider"></div>
                         </div>
-                        <div class="person-telefonnummer">@person.Telefonnummer</div>
-                    </div>
-                }
-            </tbody>
-        </table>
-
-    </div>
+                    }
+                </tbody>
+            </table>
+        </div>
 }
+
+<div class="modal fade" id="deleteConfirmationModal" tabindex="-1" role="dialog" aria-labelledby="deleteConfirmationModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteConfirmationModalLabel">Delete Confirmation</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this person?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" @onclick="ConfirmDelete">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
 
 
 @code {
+
+   
 
     private void ClearSearchText()
     {
@@ -376,41 +449,16 @@ else
         }
     }
 
-
-}
-
-
-        @code {
     [Parameter] public EventCallback<bool> OnConfirmation { get; set; }
-}
 
-<div class="modal fade" id="deleteConfirmationModal" tabindex="-1" role="dialog" aria-labelledby="deleteConfirmationModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="deleteConfirmationModalLabel">Delete Confirmation</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                Are you sure you want to delete this person?
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger" @onclick="ConfirmDelete">Delete</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-@code {
     private async Task ConfirmDelete()
     {
         await OnConfirmation.InvokeAsync(true);
     }
-}
+
+    }
+
+
 
 
 
