--- a/Client/MauiBlazorApp/Shared/NavMenu.razor
+++ b/Client/MauiBlazorApp/Shared/NavMenu.razor
@@ -31,11 +31,11 @@
         </div>
 
 
-        <div class="nav-item px-3">
+        @* <div class="nav-item px-3">
             <NavLink class="nav-link" href="android" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Android 
             </NavLink>
-        </div>
+        </div> *@
 
 
         <div class="nav-item px-3">
@@ -44,11 +44,11 @@
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
+        @* <div class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
-        </div>
+        </div> *@
     </nav>
 </div>
 
